--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,38 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 100;
   font-style: normal;
 }
+.call__button {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+}
+.call__button button {
+  width: 26.455026455vw;
+  height: 6.6137566138vw;
+  background: #9F1D00;
+  border-radius: 0.6613756614vw;
+  font-weight: 500;
+  font-size: 2.1164021164vw;
+  line-height: 129%;
+  text-transform: uppercase;
+  color: #FFEEE0;
+  margin-left: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease 0s;
+}
+.call__button button:hover {
+  filter: drop-shadow(0px 0px 15px #E10000);
+}
+.call__button button:hover span {
+  font-weight: 700;
+  letter-spacing: 0.03em;
+}
+.call__button button span {
+  transition: all 0.2s ease 0s;
+}
+
 main {
   background: linear-gradient(90deg, #FDFCFB 0%, #E2D1C3 100%);
   font-family: "Helvetica Neue", sans-serif;
@@ -654,4 +686,312 @@ body::-webkit-scrollbar-track {
 }
 .subs__slider .slick-arrow.slick-next {
   background: url("../img/arrow-right.svg") center/contain no-repeat;
+}
+.gallery__wrapper {
+  margin-top: 9.9206349206vw;
+  display: flex;
+}
+.gallery__b1 {
+  margin-right: 1.3227513228vw;
+}
+.gallery__b1-img1 {
+  max-width: 28.3068783069vw;
+  width: 100%;
+}
+.gallery__b1-img1 img {
+  width: 100%;
+}
+.gallery__b1-img2 {
+  max-width: 19.708994709vw;
+  width: 100%;
+  margin-top: 1.0582010582vw;
+  margin-left: auto;
+}
+.gallery__b1-img2 img {
+  width: 100%;
+}
+.gallery__b2 {
+  margin-right: 1.3227513228vw;
+}
+.gallery__b2-img1 {
+  max-width: 40.7407407407vw;
+  width: 100%;
+}
+.gallery__b2-img1 img {
+  width: 100%;
+}
+.gallery__b2-text {
+  max-width: 40.7407407407vw;
+  padding: 0 3.3068783069vw;
+  width: 100%;
+}
+.gallery__b2-text p {
+  font-weight: 400;
+  font-size: 2.380952381vw;
+  line-height: 124%;
+  text-align: center;
+  color: #492E18;
+  margin-top: 1.1243386243vw;
+  margin-bottom: 1.1904761905vw;
+}
+.gallery__b2-text p a {
+  font-weight: 700;
+  color: rgb(204, 51, 18);
+}
+.gallery__b2-img2 {
+  max-width: 40.7407407407vw;
+  width: 100%;
+}
+.gallery__b2-img2 img {
+  width: 100%;
+}
+.gallery__b3-img1 {
+  max-width: 19.5105820106vw;
+  width: 100%;
+  margin-bottom: 1.0582010582vw;
+}
+.gallery__b3-img1 img {
+  width: 100%;
+}
+.gallery__b3-img2 {
+  max-width: 28.3068783069vw;
+  width: 100%;
+}
+.gallery__b3-img2 img {
+  width: 100%;
+}
+.gallery__btn {
+  margin-top: 3.3068783069vw;
+  margin-right: 10.3835978836vw;
+  display: flex;
+  justify-content: end;
+  margin-left: auto;
+  position: relative;
+}
+.gallery__btn a {
+  font-weight: 700;
+  font-size: 2.380952381vw;
+  line-height: 160%;
+  letter-spacing: 0.08em;
+  color: #492E18;
+}
+.gallery__btn img {
+  position: absolute;
+  width: 11.1772486772vw;
+  right: -1.7857142857vw;
+  bottom: -0.3306878307vw;
+}
+
+.ques {
+  margin-top: 9.9206349206vw;
+}
+.ques__container {
+  max-width: 82.8042328042vw;
+  width: 100%;
+  margin: 0 auto;
+}
+.ques h3 {
+  font-weight: 500;
+  font-size: 4.2328042328vw;
+  line-height: 5.1587301587vw;
+  color: #492E18;
+  margin-bottom: 3.3068783069vw;
+}
+.ques .card,
+.ques .card-header {
+  background: transparent;
+  border: none;
+  border-radius: 0;
+}
+.ques .card {
+  border-top: 0.0661375661vw solid #CC3312;
+}
+.ques .card:last-child {
+  border-bottom: 0.0661375661vw solid #CC3312;
+}
+.ques .card-header {
+  padding: 0;
+}
+.ques .accordion .card-header button {
+  position: relative;
+}
+.ques .accordion .card-header button:after {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  content: "";
+  width: 5.291005291vw;
+  height: 5.291005291vw;
+  background: url("../img/line.svg") center/contain no-repeat;
+  float: right;
+  transition: 0.2s;
+}
+.ques .accordion .card-header button.collapsed:after {
+  background: url("../img/double.svg") center/contain no-repeat;
+}
+.ques .btn {
+  font-weight: 500;
+  font-size: 2.380952381vw;
+  line-height: 129%;
+  color: #492E18;
+  padding: 3.3068783069vw 6.6137566138vw 3.3068783069vw 0;
+}
+.ques .btn-link {
+  text-decoration: none;
+}
+.ques .btn.focus, .ques .btn:focus {
+  outline: 0;
+  box-shadow: none;
+}
+.ques .card-body {
+  font-weight: 400;
+  font-size: 2.2486772487vw;
+  line-height: 140%;
+  color: #492E18;
+  padding: 0 0 3.3068783069vw;
+}
+
+.call {
+  margin-top: 9.9206349206vw;
+  padding-bottom: 16.5343915344vw;
+}
+.call__container {
+  max-width: 82.8042328042vw;
+  width: 100%;
+  margin: 0 auto;
+}
+.call__container h3 {
+  font-weight: 500;
+  font-size: 3.1746031746vw;
+  line-height: 3.9021164021vw;
+  color: #492E18;
+  margin-bottom: 6.6137566138vw;
+}
+.call__container .call__form {
+  width: 100%;
+}
+.call__container .call__form .call__input,
+.call__container .call__form .call__comments {
+  width: 100%;
+}
+.call__container .call__form .call__input input,
+.call__container .call__form .call__input textarea,
+.call__container .call__form .call__comments input,
+.call__container .call__form .call__comments textarea {
+  color: rgb(159, 29, 0);
+  border: 1px solid #492E18;
+  padding: 2.3148148148vw 2.6455026455vw;
+  font-weight: 400;
+  font-size: 2.1164021164vw;
+  line-height: 129%;
+  width: 100%;
+  background-color: transparent;
+  margin-bottom: 2.6455026455vw;
+}
+.call__container .call__form .call__input input::-moz-placeholder, .call__container .call__form .call__input textarea::-moz-placeholder, .call__container .call__form .call__comments input::-moz-placeholder, .call__container .call__form .call__comments textarea::-moz-placeholder {
+  color: rgba(159, 29, 0, 0.7);
+}
+.call__container .call__form .call__input input::placeholder,
+.call__container .call__form .call__input textarea::placeholder,
+.call__container .call__form .call__comments input::placeholder,
+.call__container .call__form .call__comments textarea::placeholder {
+  color: rgba(159, 29, 0, 0.7);
+}
+.call__container .call__form .call__comments textarea {
+  height: 15.873015873vw;
+  margin-bottom: 6.6137566138vw;
+}
+.call__container .call__form .call__comments textarea::-moz-placeholder {
+  color: rgba(159, 29, 0, 0.7);
+}
+.call__container .call__form .call__comments textarea::placeholder {
+  color: rgba(159, 29, 0, 0.7);
+}
+.call__container .call__form .call__button {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+}
+.call__container .call__form .call__button button {
+  width: 26.455026455vw;
+  height: 6.6137566138vw;
+  background: #9F1D00;
+  border-radius: 0.6613756614vw;
+  font-weight: 500;
+  font-size: 2.1164021164vw;
+  line-height: 129%;
+  text-transform: uppercase;
+  color: #FFEEE0;
+  margin-left: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease 0s;
+}
+.call__container .call__form .call__button button:hover {
+  filter: drop-shadow(0px 0px 15px #E10000);
+}
+.call__container .call__form .call__button button:hover span {
+  font-weight: 700;
+  letter-spacing: 0.03em;
+}
+.call__container .call__form .call__button button span {
+  transition: all 0.2s ease 0s;
+}
+
+.footer {
+  padding-top: 1.455026455vw;
+  padding-bottom: 3.7037037037vw;
+}
+.footer__container {
+  max-width: 82.8042328042vw;
+  width: 100%;
+  margin: 0 auto;
+}
+.footer__top {
+  display: flex;
+  margin-bottom: 7.2751322751vw;
+}
+.footer__top-img {
+  width: 4.2328042328vw;
+  height: 4.2328042328vw;
+}
+.footer__top-img img {
+  width: 100%;
+}
+.footer__top-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 4.2328042328vw;
+  flex: 1;
+}
+.footer__top-menu ul {
+  display: flex;
+  margin-bottom: 0;
+}
+.footer__top-menu ul li {
+  font-weight: 400;
+  font-size: 2.1164021164vw;
+  line-height: 129%;
+  color: #FFE6D1;
+}
+.footer__top-menu ul li:not(:last-child) {
+  margin-right: 5.9523809524vw;
+}
+.footer__bottom {
+  display: flex;
+  justify-content: center;
+}
+.footer__bottom a {
+  width: 30.4232804233vw;
+}
+.footer__bottom a img {
+  width: 100%;
+}
+
+.footer__main {
+  background: #921A00;
 }
