--- a/css/main.css
+++ b/css/main.css
@@ -244,7 +244,7 @@ body::-webkit-scrollbar-track {
 
 .header {
   position: fixed;
-  z-index: 100;
+  z-index: 10000;
   display: flex;
   align-items: center;
   width: 100%;
@@ -1116,13 +1116,39 @@ body::-webkit-scrollbar-track {
 }
 
 .in {
-  padding-top: 4.8941798942vw;
+  padding-top: 4.6296296296vw;
+  padding-bottom: 3.9682539683vw;
   background: linear-gradient(90deg, #271A0E 0%, rgba(149, 126, 108, 0.71) 100%);
 }
 .in__container {
   max-width: 82.8042328042vw;
   width: 100%;
   margin: 0 auto;
+  position: relative;
+}
+.in__container .in__star1 {
+  position: absolute;
+  top: 0.9920634921vw;
+  right: 1.9841269841vw;
+  width: 17.7248677249vw;
+  height: 17.7248677249vw;
+  filter: blur(1.5px);
+}
+.in__container .in__star2 {
+  position: absolute;
+  top: 12.2354497354vw;
+  right: -3.3068783069vw;
+  width: 9.9867724868vw;
+  height: 9.9867724868vw;
+  filter: blur(1px);
+}
+.in__container .in__star3 {
+  position: absolute;
+  top: 21.8253968254vw;
+  right: 6.2830687831vw;
+  width: 6.2830687831vw;
+  height: 6.2830687831vw;
+  filter: blur(1.5px);
 }
 .in h2 {
   font-weight: 500;
@@ -1136,16 +1162,327 @@ body::-webkit-scrollbar-track {
   width: 100%;
 }
 .in__list-show p {
+  position: relative;
+  margin-top: -0.6613756614vw;
+  margin-bottom: 0;
+  background: linear-gradient(90deg, #32251A, #7E6D5F);
+  border-radius: 1.9841269841vw;
   font-weight: 400;
   font-size: 2.380952381vw;
   line-height: 120.3%;
   color: rgba(255, 236, 221, 0.8);
   width: 100%;
   padding: 1.3227513228vw 1.3227513228vw 2.6455026455vw;
-  background: linear-gradient(178.91deg, rgba(0, 0, 0, 0.1) 0.93%, rgba(0, 0, 0, 0) 144.63%);
-  filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.19));
-  -webkit-backdrop-filter: blur(4px);
-          backdrop-filter: blur(4px);
-  border-radius: 30px;
-  border: linear-gradient(178.91deg, rgba(0, 0, 0, 0.1) 0.93%, rgba(0, 0, 0, 0) 144.63%);
+  padding-left: 4.6296296296vw;
+  box-shadow: 0px 0.3306878307vw 0.6613756614vw rgba(0, 0, 0, 0.19);
+}
+.in__list-show p::after {
+  content: "";
+  position: absolute;
+  top: 2.380952381vw;
+  left: 2.7777777778vw;
+  display: flex;
+  width: 0.462962963vw;
+  height: 0.462962963vw;
+  border-radius: 50%;
+  background-color: rgba(255, 236, 221, 0.8);
+}
+.in__list-show p::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 1.9841269841vw;
+  padding: 1px;
+  background: linear-gradient(180deg, rgb(255, 230, 209), rgba(255, 230, 209, 0));
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
+}
+.in__list-show p:nth-child(2) {
+  z-index: 10;
+}
+.in__list-show p:nth-child(3) {
+  z-index: 20;
+}
+.in__list-show p:nth-child(4) {
+  z-index: 30;
+}
+.in__list-show p:nth-child(5) {
+  z-index: 40;
+}
+.in__list-show p:nth-child(6) {
+  z-index: 50;
+}
+.in__list-show p:nth-child(7) {
+  z-index: 60;
+}
+.in__list-show p:nth-child(8) {
+  z-index: 70;
+}
+.in__list-show p:nth-child(9) {
+  z-index: 80;
+}
+.in__list-show p:nth-child(10) {
+  z-index: 90;
+}
+.in__list-show p:nth-child(11) {
+  z-index: 100;
+}
+.in__list-show p:nth-child(12) {
+  z-index: 110;
+}
+.in__list-show p:nth-child(13) {
+  z-index: 120;
+}
+.in__list-show p:nth-child(14) {
+  z-index: 130;
+}
+.in__list-show p:nth-child(15) {
+  z-index: 140;
+}
+.in__list-show .in__showed {
+  position: relative;
+  z-index: 55;
+  display: none;
+}
+.in__list-show .in__button {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  margin-top: 4.6296296296vw;
+  cursor: pointer;
+}
+.in__list-show .in__button-img {
+  width: 7.5396825397vw;
+  height: 7.5396825397vw;
+  background: url("../img/plus.svg") center/cover no-repeat;
+}
+.in__list-show .in__button-img-toggle {
+  background: url("../img/minus.svg") center/cover no-repeat;
+}
+.in__list-show .in__button-text {
+  position: relative;
+}
+.in__list-show .in__button-text::after {
+  position: absolute;
+  left: -0.9920634921vw;
+  bottom: 0.7936507937vw;
+  width: 12.2354497354vw;
+  height: 1.9841269841vw;
+  content: "Увидеть больше";
+  font-size: 1.5873015873vw;
+  line-height: 120.3%;
+  color: rgba(255, 236, 221, 0.8);
+}
+.in__list-show .in__button-text-toggle {
+  position: relative;
+}
+.in__list-show .in__button-text-toggle::after {
+  position: absolute;
+  content: "Скрыть";
+}
+
+.feedback {
+  padding-top: 9.9206349206vw;
+  padding-bottom: 13.2275132275vw;
+}
+.feedback__container {
+  max-width: 82.8042328042vw;
+  width: 100%;
+  margin: 0 auto;
+}
+.feedback__container h2 {
+  font-weight: 500;
+  font-size: 4.2328042328vw;
+  line-height: 97.3%;
+  color: #492E18;
+  margin-bottom: 6.6137566138vw;
+}
+.feedback .feedbackSlider {
+  position: relative;
+  /* Слайдер запущен */
+  /* Слайдер с точками */
+  /* Ограничивающая оболочка */
+  /* Лента слайдов */
+  /* Слайд */
+  /* Слайд активный (показывается) */
+  /* Слайд основной */
+  /* Слайд по центру */
+  /* Клонированный слайд */
+  /* Стрелка */
+  /* Стрелка влево */
+  /* Стрелка вправо */
+  /* Стрелка не активная */
+  /* Точки (булиты) */
+  /* Активная точка */
+  /* Элемент точки */
+}
+.feedback .feedbackSlider .slick-list {
+  overflow: hidden;
+}
+.feedback .feedbackSlider .slick-track {
+  display: flex;
+}
+.feedback .feedbackSlider .slick-slide {
+  margin: 0 0.5291005291vw;
+}
+.feedback .feedbackSlider .slick-arrow {
+  position: absolute;
+  bottom: -6.6137566138vw;
+  right: 0;
+  font-size: 0;
+  width: 6.6137566138vw;
+  height: 1.3227513228vw;
+}
+.feedback .feedbackSlider .slick-arrow.slick-prev {
+  transform: rotate(180deg);
+  background: url("../img/arrow-right.svg") center/contain no-repeat;
+  left: 0;
+}
+.feedback .feedbackSlider .slick-arrow.slick-next {
+  background: url("../img/arrow-right.svg") center/contain no-repeat;
+}
+.feedback__main {
+  display: flex;
+}
+.feedback__main-img {
+  max-width: 40.7407407407vw;
+  width: 100%;
+}
+.feedback__main-img img {
+  width: 100%;
+}
+.feedback__main-text {
+  max-width: 36.7063492063vw;
+  width: 100%;
+  margin-left: 5.291005291vw;
+  flex: 1 0;
+}
+.feedback__main-text h3 {
+  font-weight: 500;
+  font-size: 3.1746031746vw;
+  line-height: 97.3%;
+  color: #CC3312;
+  margin-bottom: 3.3068783069vw;
+}
+.feedback__main-text p {
+  margin-bottom: 0;
+  font-size: 1.5873015873vw;
+  line-height: 128.8%;
+  color: rgba(73, 46, 24, 0.8);
+}
+
+.ques2 {
+  margin-top: 0;
+}
+.ques2__ty {
+  margin-top: 5.9523809524vw;
+  display: flex;
+  justify-content: end;
+}
+.ques2__ty a {
+  margin-right: 8.0687830688vw;
+  position: relative;
+  max-width: 12.6984126984vw;
+  width: 100%;
+}
+.ques2__ty a img {
+  width: 100%;
+}
+.ques2__ty a span {
+  position: absolute;
+  bottom: -0.7936507937vw;
+  right: -8.2010582011vw;
+  font-weight: 500;
+  font-size: 2.380952381vw;
+  line-height: 159.5%;
+  color: #492E18;
+}
+
+.call2 {
+  padding-bottom: 11.5740740741vw;
+}
+
+.footer__edu {
+  background: #3D2A1B;
+}
+
+.main__services {
+  background: linear-gradient(90deg, #FDFCFB 0%, #E2D1C3 100%);
+}
+
+.service {
+  padding-top: 6.0185185185vw;
+}
+.service__container {
+  max-width: 82.8042328042vw;
+  width: 100%;
+  margin: 0 auto;
+}
+.service__breadcrumb {
+  display: flex;
+  align-items: center;
+  margin-top: 3.3068783069vw;
+}
+.service__breadcrumb div {
+  width: 0.3306878307vw;
+  height: 0.3306878307vw;
+  border-radius: 50%;
+  margin-left: 3.3068783069vw;
+  margin-right: 3.3068783069vw;
+  background: #492E18;
+}
+.service__breadcrumb a {
+  font-size: 1.3227513228vw;
+  line-height: 97.3%;
+  color: rgba(73, 46, 24, 0.5);
+}
+.service__breadcrumb a:last-child {
+  color: #492E18;
+}
+.service__h2 {
+  margin-top: 6.6137566138vw;
+  margin-bottom: 3.6375661376vw;
+  font-size: 6.3492063492vw;
+  line-height: 97.3%;
+  color: #492E18;
+  padding-left: 0;
+}
+.service .accordion .card,
+.service .accordion .card-header {
+  background: transparent;
+  border: none;
+  border-radius: 0;
+}
+.service .accordion .card {
+  border-bottom: 0.0661375661vw solid #CC3312;
+}
+.service .accordion .card:last-child {
+  border-bottom: none;
+}
+.service .accordion .card-header {
+  padding: 0;
+}
+.service .accordion .accordion .card-header button {
+  position: relative;
+}
+.service .accordion .btn-link {
+  text-decoration: none;
+}
+.service .accordion .btn.focus, .service .accordion .btn:focus {
+  outline: 0;
+  box-shadow: none;
+}
+
+.footer__services {
+  background: #FFE9D8;
+}
+.footer__services nav a {
+  color: #492E18;
+}
+.footer__services nav a::after {
+  background-color: #492E18;
 }
